<resources>
    <string name="STRID_CMN_ON">On</string>
    <string name="STRID_CMN_OFF">Off</string>
    <string name="STRID_CAU_NOBATTERY">Low battery power</string>
    <string name="STRID_AMC_STR_01082">2 Sec</string>
    <string name="STRID_AMC_STR_01197">OK</string>
    <string name="STRID_AMC_STR_06553">Enter</string>
    <string name="STRID_AMC_STR_07015">Select Enter</string>
    <string name="STRID_FUNC_SNSDIRECT_SAVE">Save</string>
    <string name="STRID_FUNC_TIMELAPSE_THEME">Theme Selection</string>
    <string name="STRID_FOOTERGUIDE_EXITAPP_BY_SK1">Exit App.</string>
    <string name="STRID_FOOTERGUIDE_EXITAPP_BY_MENU">Exit App.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_GUIDE">Changes the self-timer setting.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_2S_GUIDE">Shoots 2 seconds after pressing the shutter button.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_OFF_GUIDE">Will not use self-timer.</string>
    <string name="STRID_FUNC_MLE_AMC_STR_06562_SK"></string>
    <string name="STRID_FUNC_LVG_MENU_ITEM_DRO">DRO</string>
    <string name="STRID_FUNC_STRS_MENU_ITEMS_SHOOTING_TIPS">Shooting Tips</string>
    <string name="STRID_CAU_TIMELAPSE_LENS_STEADYSHOT">Use this application with SteadyShot of lens off.</string>
    <string name="STRID_FUNC_LIVEBULB_MENU_EYESENSOR_SHUTTER">Touchless Shutter</string>
    <string name="STRID_FUNC_LIVEBULB_MENU_EYESENSOR_SHUTTER_GUIDE">You can activate the shutter by positioning your fingers in front of the Eyepiece sensors. Eyepiece sensors are found around the viewfinder. When active, you cannot use the viewfinder.</string>
    <string name="STRID_FUNC_LIVEBULB_MENU_EYESENSOR_SHUTTER_ON_GUIDE">You can activate the shutter by positioning your fingers in front of the Eyepiece sensors.</string>
    <string name="STRID_FUNC_LIVEBULB_MENU_EYESENSOR_SHUTTER_OFF_GUIDE">The shutter will not be activated even though you position your fingers in front of the Eyepiece sensors.</string>
    <string name="STRID_FUNC_SELFIE_CL_PREVIEW">Preview</string>
    <string name="STRID_FUNC_LIVEBULB_MENU_EYESENSOR_SHUTTER_ON_CAUTION">To use Touchless Shutter, make sure FINDER/MONITOR is set to Auto before launching this application.</string>
    <string name="STRID_FUNC_SKYND_TBLUESKY">Blue Sky</string>
    <string name="STRID_FUNC_SKYND_TBLUESKY_GUIDE">Expresses the blue sky impressively.</string>
    <string name="STRID_FUNC_SKYND_TSUNSET">Sunset</string>
    <string name="STRID_FUNC_SKYND_TSUNSET_GUIDE">Expresses the redness of dusk scenes impressively.</string>
    <string name="STRID_FUNC_SKYND_TCUSTOM_GUIDE">Freely set your desired effect.</string>
    <string name="STRID_FUNC_SKYND_RECOMMENDEDEXP_A_GUIDE">The recommended exposure mode is A mode.</string>
    <string name="STRID_FUNC_SKYND_SAVEIMAGE">Save Image</string>
    <string name="STRID_FUNC_SKYND_SAVEIMAGE_GUIDE">Sets whether to save only the effect image or the effect image and original images together.</string>
    <string name="STRID_FUNC_SKYND_SAVEIMAGE_COMPOSITEIMAGE">Only Effect Image</string>
    <string name="STRID_FUNC_SKYND_SAVEIMAGE_COMPOSITEIMAGE_GUIDE">Saves only the effect image.</string>
    <string name="STRID_FUNC_SKYND_SAVEIMAGE_ALL">All</string>
    <string name="STRID_FUNC_SKYND_SAVEIMAGE_ALL_GUIDE">Saves 2 original images and an effect image.</string>
    <string name="STRID_FUNC_SKYND_SETTING_CURRENT_THEME_RESET_GUIDE">Restores all the setting values adjusted for the current theme to their defaults.</string>
    <string name="STRID_CAUTION_SKYND_COMFIRM_CURRENT_THEME_RESET">Restore all the setting values adjusted for the current theme to their defaults?</string>
    <string name="STRID_FUNC_SKYND_DRO_GUIDE">Sets settings to optimize gradation.</string>
    <string name="STRID_FUNC_SKYND_APPSETTING_FOOTER_01">Select Adjust </string>
    <string name="STRID_FUNC_SKYND_APPSETTING_FOOTER_01_SK">Select Adjust </string>
    <string name="STRID_FUNC_SKYND_APPSETTING_FOOTER_03">Select Enter </string>
    <string name="STRID_FUNC_SKYND_APPSETTING_FOOTER_03_SK">Select Enter </string>
    <string name="STRID_FUNC_SKYND_POSITION_FOOTER">Move Rotate Enter </string>
    <string name="STRID_FUNC_SKYND_POSITION_FOOTER_SK">Move Rotate Enter </string>
    <string name="STRID_FUNC_SKYND_PREVIEW_EDIT">Adjust </string>
    <string name="STRID_FUNC_SKYND_PREVIEW_FOOTER">Select Enter </string>
    <string name="STRID_FUNC_SKYND_ADJUST_SAVE">Save</string>
    <string name="STRID_FUNC_SKYND_ADJUST_SAVE_GUIDE">Saves the image.</string>
    <string name="STRID_CAUTION_SKYND_EXPOSURECOMP_DIAL">The exposure compensation dial is invalid on this application.\nSet the exposure compensation value with .</string>
    <string name="STRID_CAUTION_SKYND_APERTURERING_DIAL">The aperture ring is invalid on this application.\nSet the aperture value with  when in exposure mode A or M.</string>
    <string name="STRID_FUNC_SKYND_LAUNCHER_NAME">Sky HDR</string>
    <string name="STRID_FUNC_SKYND_LAUNCHER_NAME_2L">Sky\nHDR</string>
    <string name="STRID_FUNC_SKYND_LAUNCHER_GUIDE">You can shoot vivid shots of the blue sky and sunset, etc. that have different brightness.</string>
    <string name="STRID_FUNC_SKYND_SETTING_CURRENT_THEME_RESET_MENU">Reset Current Theme</string>
    <string name="STRID_FUNC_SKYND_GRADATION_DISABLEBAR_FOOTER">Adjust Enter </string>
    <string name="STRID_FUNC_SKYND_GRADATION_DISABLEBAR_FOOTER_SK">Adjust Enter </string>
    <string name="STRID_FUNC_APP_GUIDE_GUIDE">Displays shooting tips for taking pictures with this application.</string>
    <string name="STRID_FUNC_SKYND_OPERATION_GUIDE_STEP">Step %s</string>
    <string name="STRID_FUNC_SKYND_INTRODUCTION_GUIDE_OVERALL">Expresses landscapes with different brightness levels into one picture. You can also independently control the color of the land and the sky.  \nIt will shoot an HDR photo after separately setting the exposure and white balance for the land and the sky respectively.</string>
    <string name="STRID_FUNC_SKYND_INTRODUCTION_GUIDE_STEP1">Choose the composition of the photo, and adjust the exposure and white balance of the land area.</string>
    <string name="STRID_FUNC_SKYND_INTRODUCTION_GUIDE_STEP2">Press the  and enter the settings for adjusting the boundary between the land area and the sky area. \nYou can also adjust the exposure and white balance for the sky area.</string>
    <string name="STRID_FUNC_SKYND_INTRODUCTION_GUIDE_STEP3">Press the shutter button, and the shutter will be released twice automatically, creating the image with the effects applied.\nWhen you want to shoot in RAW, go to the Menu in the application.</string>
    <string name="STRID_FUNC_SKYND_INTRODUCTION_GUIDE_TITLE_INFO">Guide</string>
    <string name="STRID_FUNC_SKYND_INTRODUCTION_GUIDE_INFO">- Stabilize the device with a tripod when shooting.\n- Set \"Distortion Compensation\" to \"Off\" before using this application.\nThe application is not recommended to use with lenses for which the compensation cannot be set to \"Off\".\n- This guide can be seen from the \"Shooting Tips\" in the menu.</string>
    <string name="STRID_FUNC_SKYND_OPERATION_GUIDE_STEP1">Choose the composition of the photo, and adjust the exposure and white balance of the land area.\nEnter the settings for adjusting the sky area by pressing SKY SET.</string>
    <string name="STRID_FUNC_SKYND_SKYSETTINGS">Sky Area Settings</string>
    <string name="STRID_FUNC_SKYND_SKYSETTINGS_GUIDE">Sets the effect of the sky area.</string>
    <string name="STRID_FUNC_SKYND_EXPOSURECOMP_EARTH">Exposure Comp. of the Land</string>
    <string name="STRID_FUNC_SKYND_ISO_EARTH">ISO of the Land</string>
    <string name="STRID_FUNC_SKYND_WB_EARTH">WB of the Land</string>
    <string name="STRID_FUNC_SKYND_WB_ADJUSTMENT_EARTH">WB Adjustment of the Land</string>
    <string name="STRID_FUNC_SKYND_OPERATION_GUIDE_STEP2">Adjust the boundary between the land area and the sky area, and the exposure/white balance of the sky area.</string>
    <string name="STRID_FUNC_SKYND_SKYSETTINGS_POSITION">Sets the position of the boundary between the land area and the sky area.</string>
    <string name="STRID_FUNC_SKYND_SKYSETTINGS_GRADATION">Sets the defocus condition of the boundary between the land area and the sky area.</string>
    <string name="STRID_FUNC_SKYND_EXPOSURE_SKY">Exposure Settings</string>
    <string name="STRID_FUNC_SKYND_EXPOSURE_SKY_L">Exposure of the Sky (Ev/ISO/Tv/Av)</string>
    <string name="STRID_FUNC_SKYND_WB_SKY">WB of the Sky</string>
    <string name="STRID_FUNC_SKYND_OPERATION_GUIDE_EXPOSURE">Set the exposure of the sky area.\nYou can also adjust the exposure compensation, ISO, shutter speed, and aperture.</string>
    <string name="STRID_FUNC_SKYND_EXPOSURECOMP_SKY">Exposure Comp. of the Sky</string>
    <string name="STRID_FUNC_SKYND_ISO_SKY">ISO of the Sky</string>
    <string name="STRID_FUNC_SKYND_WB_ADJUSTMENT_SKY">WB Adjustment of the Sky</string>
    <string name="STRID_FUNC_SKYND_WB_EARTHSETTING">Match to the land settings</string>
    <string name="STRID_FUNC_SKYND_WB_EARTHSETTING_GUIDE">Matches to the white balance of the land area.</string>
    <string name="STRID_FUNC_SKYND_OPERATION_GUIDE_FINISHING_ADJUSTMENT">Adjusts the boundary between the land area and the sky area of the image taken.</string>
    <string name="STRID_CAUTION_SKYND_SKYSETTINGS_INVALID">This function is disabled with the “Sky Area Settings”.</string>
    <string name="STRID_CAUTION_SKYND_SET_FLASG_WB_SKY_EARTH">“White Balance” setting of the land area and the sky area has been changed to \"Flash\".</string>
    <string name="STRID_CAUTION_SKYND_SET_FLASG_WB_EARTH">“White Balance” setting of the land area has been changed to \"Flash\".</string>
    <string name="STRID_CAUTION_SKYND_SET_FLASG_WB_SKY">“White Balance” setting of the sky area has been changed to \"Flash\".</string>
    <string name="STRID_FUNC_SKYND_TSTANDART_GUIDE">Shoots image with only different exposures.</string>
    <string name="STRID_FUNC_SKYND_SHOOTING_ORDER">Shooting Order</string>
    <string name="STRID_FUNC_SKYND_SHOOTING_ORDER_FROM_SKY">Sky → Land</string>
    <string name="STRID_FUNC_SKYND_SHOOTING_ORDER_FROM_EARTH">Land → Sky</string>
    <string name="STRID_FUNC_SKYND_SHOOTING_ORDER_GUIDE">Sets order of shooting.</string>
    <string name="STRID_FUNC_SKYND_SHOOTING_ORDER_FROM_SKY_GUIDE">The image of the sky with the applied settings is taken first, followed by the image of the land with its applied settings.</string>
    <string name="STRID_FUNC_SKYND_SHOOTING_ORDER_FROM_EARTH_GUIDE">The image of the land with the applied settings is taken first, followed by the image of the sky with its applied settings.</string>
    <string name="STRID_FUNC_SKYND_FINISHINGADJUSTMENT">Finishing Adjustment</string>
    <string name="STRID_FUNC_SKYND_SKIP_FINISHINGADJUSTMENT_GUIDE">After exposure, sets whether or not to adjust the boundary between the land area and the sky area before recording the images.</string>
    <string name="STRID_FUNC_SKYND_SKIP_FINISHINGADJUSTMENT_ON_GUIDE">After exposure, does not adjust the boundary between the land area and the sky area before recording the images.</string>
    <string name="STRID_FUNC_SKYND_SKIP_FINISHINGADJUSTMENT_OFF_GUIDE">After exposure, adjusts the boundary between the land area and the sky area while the shot image is being viewed before recording the images.</string>
    <string name="STRID_FUNC_SKYND_SKYSETTING_POSITION">Position of Boundary</string>
    <string name="STRID_FUNC_SKYND_SKYSETTING_GRADATION">Defocus of Boundary</string>
    <string name="STRID_FUNC_SKYND_SKYSETTING_EXPOSURE_GUIDE">Sets the exposure of the sky area.</string>
    <string name="STRID_FUNC_SKYND_SKYSETTING_WHITEBALANCE_GUIDE">Sets the white balance of the sky area.</string>
    <string name="STRID_FOOTERGUIDE_MENU_ITEMS_SHOOTING_TIPS">Back/Next OK</string>
</resources>