<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="left"
        android:id="@+id/menu_screen_title"
        android:layout_width="604px"
        android:layout_height="48px"
        android:layout_marginLeft="18px"
        android:layout_marginTop="4px"
        android:text="@string/STRID_FUNC_SELFIE_CL_PREVIEW"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_ON"/>
    <com.sony.imaging.app.base.common.widget.BatteryIcon
        android:id="@+id/i10_2"
        android:layout_width="49px"
        android:layout_height="32px"
        android:layout_marginLeft="535px"
        android:layout_marginTop="2px"
        android:src="@drawable/icon_preend_battery"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="center"
        android:id="@+id/editBtn"
        android:layout_width="240px"
        android:layout_height="56px"
        android:layout_marginLeft="388px"
        android:layout_marginTop="300px"
        android:text="@string/STRID_FUNC_SKYND_PREVIEW_EDIT"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_ON"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="center"
        android:id="@+id/saveBtn"
        android:layout_width="240px"
        android:layout_height="56px"
        android:layout_marginLeft="388px"
        android:layout_marginTop="364px"
        android:text="@string/STRID_FUNC_SNSDIRECT_SAVE"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_ON"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:guide_text_style="@attr/transparent_footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="12px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_SKYND_PREVIEW_FOOTER"
        base:guide_text_emt="@string/STRID_FUNC_SKYND_PREVIEW_FOOTER"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.UpdatingImage
        android:id="@+id/updating"
        android:layout_width="46px"
        android:layout_height="46px"
        android:layout_marginLeft="8px"
        android:layout_marginTop="430px"
        android:src="@drawable/progress_animation"
        android:scaleType="fitXY"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.UpdatingText
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="left"
        android:id="@+id/updating_text"
        android:layout_width="544px"
        android:layout_height="46px"
        android:layout_marginLeft="56px"
        android:layout_marginTop="430px"
        android:text="@android:string/deleteText"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
</RelativeLayout>
