<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.sony.imaging.app.graduatedfilter.shooting.widget.BorderView
        android:id="@+id/border_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        base:border_mode="normal"
        base:setting="common"/>
    <com.sony.imaging.app.util.RelativeLayoutGroup
        android:id="@+id/battery_icon_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"
        base:group="BatteryIcon">
        <LinearLayout
            android:gravity="right"
            android:layout_width="105px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="535px"
            android:layout_marginTop="0px">
            <com.sony.imaging.app.base.common.widget.BatteryIcon
                android:id="@+id/i10_2"
                android:layout_width="49px"
                android:layout_height="32px"
                android:layout_marginLeft="0px"
                android:layout_marginTop="2px"
                android:src="@drawable/icon_battery"/>
            <com.sony.imaging.app.base.common.widget.BatteryLevelText
                android:typeface="4"
                android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                android:gravity="left"
                android:id="@+id/i1_1"
                android:layout_width="58px"
                android:layout_height="36px"
                android:layout_marginLeft="-2px"
                android:layout_marginTop="0px"
                style="@style/RESID_FONTSIZE_SP_REC_BASE_INFO"/>
        </LinearLayout>
    </com.sony.imaging.app.util.RelativeLayoutGroup>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="left"
        android:id="@+id/menu_screen_title"
        android:layout_width="604px"
        android:layout_height="48px"
        android:layout_marginLeft="18px"
        android:layout_marginTop="4px"
        android:text="@string/STRID_FUNC_SKYND_FINISHINGADJUSTMENT"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_ON"/>
    <RelativeLayout
        android:id="@+id/iconBase0"
        android:background="0x10811bd"
        android:layout_width="190px"
        android:layout_height="66px"
        android:layout_marginLeft="177px"
        android:layout_marginTop="360px"/>
    <RelativeLayout
        android:id="@+id/iconBase1"
        android:background="0x10811bd"
        android:layout_width="240px"
        android:layout_height="56px"
        android:layout_marginLeft="388px"
        android:layout_marginTop="364px"/>
    <ImageView
        android:id="@+id/separater0"
        android:layout_width="2px"
        android:layout_height="66px"
        android:layout_marginLeft="271px"
        android:layout_marginTop="360px"
        android:src="@drawable/p_16_dd_parts_pe_parameter_separater"/>
    <ImageView
        android:id="@+id/focus00"
        android:layout_width="94px"
        android:layout_height="66px"
        android:layout_marginLeft="177px"
        android:layout_marginTop="360px"/>
    <ImageView
        android:id="@+id/focus01"
        android:layout_width="94px"
        android:layout_height="66px"
        android:layout_marginLeft="273px"
        android:layout_marginTop="360px"/>
    <ImageView
        android:id="@+id/focus03"
        android:layout_width="240px"
        android:layout_height="56px"
        android:layout_marginLeft="388px"
        android:layout_marginTop="364px"/>
    <ImageView
        android:id="@+id/option00Image"
        android:layout_width="94px"
        android:layout_height="66px"
        android:layout_marginLeft="177px"
        android:layout_marginTop="360px"
        android:src="@drawable/p_16_dd_parts_hgf_position_icon"/>
    <ImageView
        android:id="@+id/option01Image"
        android:layout_width="94px"
        android:layout_height="66px"
        android:layout_marginLeft="273px"
        android:layout_marginTop="360px"
        android:src="@drawable/p_16_dd_parts_hgf_gradation_icon"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="center"
        android:id="@+id/option01Value"
        android:layout_width="46px"
        android:layout_height="28px"
        android:layout_marginLeft="319px"
        android:layout_marginTop="380px"
        style="@style/RESID_FONTSIZE_S_EDGE"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="center"
        android:id="@+id/saveBtn"
        android:layout_width="240px"
        android:layout_height="56px"
        android:layout_marginLeft="388px"
        android:layout_marginTop="367px"
        android:text="@string/STRID_FUNC_SNSDIRECT_SAVE"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_ON"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_FOCUSED"
        android:gravity="center"
        android:id="@+id/item_name"
        android:layout_width="484px"
        android:layout_height="44px"
        android:layout_marginLeft="78px"
        android:layout_marginTop="313px"
        android:text="@null"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:guide_text_style="@attr/transparent_footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="12px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_SKYND_APPSETTING_FOOTER_01"
        base:guide_text_emt="@string/STRID_FUNC_SKYND_APPSETTING_FOOTER_01_SK"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.UpdatingImage
        android:id="@+id/updating"
        android:layout_width="46px"
        android:layout_height="46px"
        android:layout_marginLeft="8px"
        android:layout_marginTop="430px"
        android:src="@drawable/progress_animation"
        android:scaleType="fitXY"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.UpdatingText
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="left"
        android:id="@+id/updating_text"
        android:layout_width="544px"
        android:layout_height="46px"
        android:layout_marginLeft="56px"
        android:layout_marginTop="430px"
        android:text="@android:string/deleteText"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <RelativeLayout
        android:id="@+id/adjust_guide"
        android:background="0x10811bd"
        android:layout_width="524px"
        android:layout_height="198px"
        android:layout_marginLeft="58px"
        android:layout_marginTop="115px">
        <TextView
            android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
            android:gravity="left"
            android:id="@+id/adjust_guide_text"
            android:layout_width="484px"
            android:layout_height="168px"
            android:layout_marginLeft="20px"
            android:layout_marginTop="13px"
            android:text="@string/STRID_FUNC_SKYND_OPERATION_GUIDE_FINISHING_ADJUSTMENT"
            style="@style/RESID_FONTSIZE_STD_L_EDGE_ON"/>
    </RelativeLayout>
    <include
        android:id="@+id/function_guide"
        android:visibility="gone"
        layout="@layout/function_guide"/>
</RelativeLayout>
