<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ls="http://schemas.android.com/apk/res/com.sony.imaging.app.graduatedfilter" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pb_parts_cmn_skarea"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <com.sony.imaging.app.graduatedfilter.shooting.widget.GridLine
        android:id="@+id/gridline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.BorderView
        android:id="@+id/border_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        base:border_mode="normal"
        base:main_line_color="#ffff8800"
        base:setting="filter"/>
    <com.sony.imaging.app.base.common.widget.BatteryIcon
        android:id="@+id/i10_2"
        android:layout_width="49px"
        android:layout_height="32px"
        android:layout_marginLeft="535px"
        android:layout_marginTop="2px"
        android:src="@drawable/icon_preend_battery"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="left"
        android:id="@+id/menu_screen_title"
        android:layout_width="604px"
        android:layout_height="48px"
        android:layout_marginLeft="18px"
        android:layout_marginTop="4px"
        android:text="@string/STRID_FUNC_SKYND_SKYSETTING_POSITION"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_ON"/>
    <ImageView
        android:id="@+id/delete_button"
        android:background="@drawable/p_16_dd_parts_key_delete"
        android:layout_width="96px"
        android:layout_height="48px"
        android:layout_marginLeft="379px"
        android:layout_marginTop="381px"/>
    <ImageView
        android:id="@+id/delete_button_disp"
        android:layout_width="96px"
        android:layout_height="48px"
        android:layout_marginLeft="399px"
        android:layout_marginTop="381px"
        android:src="@drawable/p_16_dd_parts_hgf_disp_icon"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.GFGraphView
        android:id="@+id/filter_histgram"
        android:background="0x10810bf"
        android:layout_width="132px"
        android:layout_height="36px"
        android:layout_marginLeft="500px"
        android:layout_marginTop="348px"
        base:color="#ffff8800"
        base:hist_mode="filter"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.GFGraphView
        android:id="@+id/base_histgram"
        android:background="0x10810bf"
        android:layout_width="132px"
        android:layout_height="36px"
        android:layout_marginLeft="500px"
        android:layout_marginTop="384px"
        base:color="#ffffffff"
        base:hist_mode="base"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:group="footer"
        base:guide_text_style="@attr/transparent_footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="12px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_SKYND_POSITION_FOOTER"
        base:guide_text_emt="@string/STRID_FUNC_SKYND_POSITION_FOOTER_SK"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.UpdatingImage
        android:id="@+id/updating"
        android:layout_width="46px"
        android:layout_height="46px"
        android:layout_marginLeft="8px"
        android:layout_marginTop="430px"
        android:src="@drawable/progress_animation"
        android:scaleType="fitXY"/>
    <com.sony.imaging.app.graduatedfilter.shooting.widget.UpdatingText
        android:textColor="@color/RESID_FONTSTYLE_CMN_WHITE_NO_SKIN"
        android:gravity="left"
        android:id="@+id/updating_text"
        android:layout_width="544px"
        android:layout_height="46px"
        android:layout_marginLeft="56px"
        android:layout_marginTop="430px"
        android:text="@android:string/deleteText"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
</RelativeLayout>
