<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:background="0x10809c3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"
        android:src="@android:drawable/list_longpressed_holo_dark"/>
    <ImageView
        android:id="@+id/appicon"
        android:layout_width="60px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"
        android:src="@drawable/p_16_dd_parts_sky_appicon"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="left"
        android:id="@+id/menu_screen_title"
        android:layout_width="304px"
        android:layout_height="46px"
        android:layout_marginLeft="68px"
        android:layout_marginTop="6px"
        android:text="@string/STRID_FUNC_STRS_MENU_ITEMS_SHOOTING_TIPS"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <ImageView
        android:id="@+id/guide_page1"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_marginLeft="469px"
        android:layout_marginTop="17px"
        android:src="@drawable/p_16_dd_parts_lvg_param_box_other_position_circle"/>
    <ImageView
        android:id="@+id/guide_page2"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_marginLeft="501px"
        android:layout_marginTop="17px"
        android:src="@drawable/p_16_dd_parts_lvg_param_box_other_position_circle"/>
    <ImageView
        android:id="@+id/guide_page3"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_marginLeft="533px"
        android:layout_marginTop="17px"
        android:src="@drawable/p_16_dd_parts_lvg_param_box_other_position_circle"/>
    <ImageView
        android:id="@+id/guide_page4"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_marginLeft="565px"
        android:layout_marginTop="17px"
        android:src="@drawable/p_16_dd_parts_lvg_param_box_other_position_circle"/>
    <ImageView
        android:id="@+id/guide_page5"
        android:layout_width="20px"
        android:layout_height="20px"
        android:layout_marginLeft="597px"
        android:layout_marginTop="17px"
        android:src="@drawable/p_16_dd_parts_lvg_param_box_other_position_circle"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="640px"
        android:layout_height="348px"
        android:layout_marginTop="67px"
        android:fadeScrollbars="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                    android:id="@+id/guide_text1"
                    android:layout_width="484px"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="78px"
                    android:text="@string/STRID_FUNC_SKYND_INTRODUCTION_GUIDE_OVERALL"
                    style="@style/RESID_FONTSIZE_STD_M_EDGE_OFF"/>
                <ImageView
                    android:id="@+id/guide_image"
                    android:layout_width="484px"
                    android:layout_height="152px"
                    android:layout_marginLeft="78px"
                    android:src="@drawable/p_16_dd_parts_hgf_shootingtips_summary"/>
                <TextView
                    android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
                    android:id="@+id/guide_text2"
                    android:layout_width="484px"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="78px"
                    android:text="@string/STRID_FUNC_SKYND_INTRODUCTION_GUIDE_OVERALL"
                    style="@style/RESID_FONTSIZE_STD_M_EDGE_OFF"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide"
        android:background="0x1080a15"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:guide_text_style="@attr/footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="12px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FOOTERGUIDE_MENU_ITEMS_SHOOTING_TIPS"
        base:guide_text_emt="@string/STRID_FOOTERGUIDE_MENU_ITEMS_SHOOTING_TIPS"/>
</RelativeLayout>
